--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: 'Custom';
+  src: url('/fonts/sofia-regular.ttf') format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Custom';
+  src: url('/fonts/sofia-italic.ttf') format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Custom';
+  src: url('/fonts/sofia-bold.ttf') format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Custom';
+  src: url('/fonts/sofia-bold-italic.ttf') format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
